docs(14): revise plans 02 and 04 based on checker feedback
Plan 02: Add eid-based tenant resolution for checkout.session.completed
webhook handler (external pricing page passes eid via URL param into
Stripe session metadata). Add TENANT_REPOSITORY to BillingModule.

Plan 04: Add App.tsx, app-shell.tsx, config/urls.ts, use-trial.test.ts
to files_modified. Make AppShell topNotice a neutral container. Add
key_links for layout integration. Add useTrial hook unit tests.

--- a/.planning/phases/14-monetization/14-02-PLAN.md
+++ b/.planning/phases/14-monetization/14-02-PLAN.md
@@ -27,13 +27,15 @@ user_setup:
         location: "Stripe Dashboard -> Developers -> Webhooks -> Add endpoint"
       - task: "Enable events: checkout.session.completed, customer.subscription.created, customer.subscription.updated, customer.subscription.deleted, invoice.paid, invoice.payment_failed"
         location: "Stripe Dashboard -> Developers -> Webhooks -> Select events"
+      - task: "On Stripe products for Pro and Enterprise, add metadata key 'tier' with value 'pro' or 'enterprise'"
+        location: "Stripe Dashboard -> Products -> Select product -> Metadata"
 must_haves:
   truths:
     - "Stripe webhook endpoint at POST /api/billing/webhook processes events from Stripe"
     - "Webhook endpoint verifies Stripe signature before processing"
     - "Webhook endpoint bypasses SessionGuard, CsrfGuard, and throttle"
     - "Duplicate webhook events are detected and skipped via stripe_webhook_events table"
-    - "checkout.session.completed creates/updates org subscription with correct tier"
+    - "checkout.session.completed resolves tenant via eid from Stripe session metadata, then creates/updates org subscription with correct tier"
     - "customer.subscription.updated updates tier and period end date"
     - "customer.subscription.deleted downgrades org to free tier"
     - "invoice.payment_failed is logged but does not immediately downgrade"
@@ -62,6 +64,10 @@ must_haves:
       to: "packages/database/src/repositories/drizzle-repositories.ts"
       via: "org_subscriptions and stripe_webhook_events repository calls"
       pattern: "orgSubscriptionRepo|webhookEventRepo"
+    - from: "apps/api/src/billing/webhook-handler.service.ts"
+      to: "packages/database/src/repositories/drizzle-repositories.ts"
+      via: "tenantRepo.findByEid to resolve eid from Stripe metadata to tenantId"
+      pattern: "tenantRepo\\.findByEid"
     - from: "apps/api/src/main.ts"
       to: "apps/api/src/billing/billing.controller.ts"
       via: "fastify-raw-body plugin enables req.rawBody on webhook route"
@@ -71,7 +77,7 @@ must_haves:
 <objective>
 Implement the Stripe webhook integration that processes payment events and updates org subscriptions.
 
-Purpose: This is the bridge between Stripe's payment infrastructure and the app's tier system. When a customer pays via Stripe Checkout on the external pricing page, a webhook event flows through this module to update the org's subscription tier in real-time.
+Purpose: This is the bridge between Stripe's payment infrastructure and the app's tier system. When a customer pays via Stripe Checkout on the external pricing page, a webhook event flows through this module to update the org's subscription tier in real-time. The external pricing page creates the Stripe Checkout session (per user decision: "purchase happens outside the MCE iframe"), embedding the tenant's `eid` in session metadata so the webhook can resolve which org to provision.
 
 Output: Complete BillingModule with webhook endpoint, signature verification, idempotent event processing, and unit tests.
 </objective>
@@ -143,13 +149,14 @@ Output: Complete BillingModule with webhook endpoint, signature verification, id
     Constructor injects:
     - ORG_SUBSCRIPTION_REPOSITORY (IOrgSubscriptionRepository)
     - STRIPE_WEBHOOK_EVENT_REPOSITORY (IStripeWebhookEventRepository)
+    - TENANT_REPOSITORY (ITenantRepository) -- needed to resolve eid from Stripe metadata to tenantId
     - AuditService
     - Logger
 
     `process(event: Stripe.Event)` method:
     1. Call `webhookEventRepo.markProcessing(event.id, event.type)`. If returns false, log debug "Duplicate event skipped" and return (already processed).
     2. Try/catch block routes event by type:
-       - `checkout.session.completed`: Extract customer ID and subscription ID from session. Look up metadata for tenant ID (stored in Stripe checkout session metadata). Update org_subscriptions: stripeCustomerId, stripeSubscriptionId, tier based on price/product metadata. Log audit event `subscription.created`.
+       - `checkout.session.completed`: Extract customer ID and subscription ID from session. Read `eid` from `session.metadata.eid` (the external pricing page embeds the tenant's Enterprise ID in Stripe Checkout session metadata -- per user decision, the purchase happens on the external website, which receives the eid via URL parameter from the app's upgrade CTA). Resolve eid to tenantId via `tenantRepo.findByEid(eid)`. If tenant not found, log error and throw (Stripe will retry). Update org_subscriptions by tenantId: stripeCustomerId, stripeSubscriptionId, tier based on price/product metadata. Log audit event `subscription.created`.
        - `customer.subscription.updated`: Extract subscription object. Map Stripe subscription status + price to tier. Update org_subscriptions: tier, currentPeriodEnds, seatLimit (from subscription quantity). If status is `past_due` or `unpaid`, keep current tier (graceful degradation per user decision). Log audit event `subscription.updated`.
        - `customer.subscription.deleted`: Find org by stripeCustomerId using `orgSubscriptionRepo.findByStripeCustomerId(customerId)`. Update org_subscriptions: tier = "free", stripeSubscriptionId = null, currentPeriodEnds = null. Log audit event `subscription.canceled`.
        - `invoice.paid`: Update currentPeriodEnds from invoice period_end. Log audit event.
@@ -211,7 +218,7 @@ Output: Complete BillingModule with webhook endpoint, signature verification, id
 
     NestJS module wiring:
     - Imports: DatabaseModule, AuditModule (for AuditService)
-    - Providers: StripeProvider, BillingController, WebhookHandlerService, ORG_SUBSCRIPTION_REPOSITORY factory, STRIPE_WEBHOOK_EVENT_REPOSITORY factory
+    - Providers: StripeProvider, BillingController, WebhookHandlerService, ORG_SUBSCRIPTION_REPOSITORY factory, STRIPE_WEBHOOK_EVENT_REPOSITORY factory, TENANT_REPOSITORY factory
     - Controllers: [BillingController]
     - Exports: [] (nothing needs to be exported for now; add exports when consumers exist)
 
@@ -225,6 +232,11 @@ Output: Complete BillingModule with webhook endpoint, signature verification, id
     {
       provide: 'STRIPE_WEBHOOK_EVENT_REPOSITORY',
       useFactory: (db: any) => new DrizzleStripeWebhookEventRepository(db),
+      inject: ['DATABASE'],
+    },
+    {
+      provide: 'TENANT_REPOSITORY',
+      useFactory: (db: any) => new DrizzleTenantRepository(db),
       inject: ['DATABASE'],
     },
     ```
@@ -267,7 +279,7 @@ Output: Complete BillingModule with webhook endpoint, signature verification, id
     - Verify webhook route exists: `curl -X POST http://localhost:3000/api/billing/webhook` returns 503 (Stripe not configured) or 401 (no signature) -- NOT 401 session required
   </verify>
   <done>
-    BillingModule created with StripeProvider, BillingController (webhook endpoint), WebhookHandlerService (idempotent processing of 6 event types). fastify-raw-body registered in main.ts. Webhook endpoint bypasses session/CSRF auth and uses Stripe signature verification. No dead code -- all services have consumers.
+    BillingModule created with StripeProvider, BillingController (webhook endpoint), WebhookHandlerService (idempotent processing of 6 event types with eid-based tenant resolution). fastify-raw-body registered in main.ts. Webhook endpoint bypasses session/CSRF auth and uses Stripe signature verification. No dead code -- all services have consumers.
   </done>
 </task>
 
@@ -284,12 +296,13 @@ Output: Complete BillingModule with webhook endpoint, signature verification, id
 
     Test cases:
     1. **Idempotency**: When markProcessing returns false (duplicate event), process() returns without calling any handler. Verify no orgSubscriptionRepo calls made.
-    2. **checkout.session.completed**: Process a mock Stripe CheckoutSession event. Verify orgSubscriptionRepo.updateFromWebhook called with correct tier, stripeCustomerId, stripeSubscriptionId. Verify webhookEventRepo.markCompleted called.
-    3. **customer.subscription.updated**: Process a mock subscription update event. Verify tier mapping works (active -> pro/enterprise based on metadata, past_due -> keeps current tier). Verify currentPeriodEnds updated.
-    4. **customer.subscription.deleted**: Process a mock subscription deletion. Verify orgSubscriptionRepo.findByStripeCustomerId called with correct customer ID. Verify tier set to "free", stripeSubscriptionId cleared.
-    5. **invoice.payment_failed**: Process a failed payment event. Verify NO tier change (graceful degradation). Verify audit event logged.
-    6. **Error handling**: When handler throws, verify markFailed is called with event ID and error message, and error is re-thrown.
-    7. **Unhandled event type**: Process an unknown event type. Verify markCompleted called (acknowledge but no action).
+    2. **checkout.session.completed**: Process a mock Stripe CheckoutSession event with `metadata.eid` set. Verify tenantRepo.findByEid called with correct eid. Verify orgSubscriptionRepo.updateFromWebhook called with resolved tenantId, correct tier, stripeCustomerId, stripeSubscriptionId. Verify webhookEventRepo.markCompleted called.
+    3. **checkout.session.completed with unknown eid**: When tenantRepo.findByEid returns undefined, verify error is thrown (so Stripe retries) and markFailed is called.
+    4. **customer.subscription.updated**: Process a mock subscription update event. Verify tier mapping works (active -> pro/enterprise based on metadata, past_due -> keeps current tier). Verify currentPeriodEnds updated.
+    5. **customer.subscription.deleted**: Process a mock subscription deletion. Verify orgSubscriptionRepo.findByStripeCustomerId called with correct customer ID. Verify tier set to "free", stripeSubscriptionId cleared.
+    6. **invoice.payment_failed**: Process a failed payment event. Verify NO tier change (graceful degradation). Verify audit event logged.
+    7. **Error handling**: When handler throws, verify markFailed is called with event ID and error message, and error is re-thrown.
+    8. **Unhandled event type**: Process an unknown event type. Verify markCompleted called (acknowledge but no action).
 
     Create mock Stripe event factories for each event type. Use the `Stripe.Event` type for type safety.
 
@@ -314,10 +327,10 @@ Output: Complete BillingModule with webhook endpoint, signature verification, id
   <verify>
     - `pnpm --filter api test` passes
     - Both test files run without errors
-    - All test cases pass including idempotency, error handling, and event routing
+    - All test cases pass including idempotency, eid resolution, error handling, and event routing
   </verify>
   <done>
-    WebhookHandlerService has unit tests for all 6 event types plus idempotency and error handling. BillingController has unit tests for webhook endpoint including signature verification and edge cases.
+    WebhookHandlerService has unit tests for all 6 event types plus idempotency, eid resolution, and error handling. BillingController has unit tests for webhook endpoint including signature verification and edge cases.
   </done>
 </task>
 
@@ -337,8 +350,9 @@ Output: Complete BillingModule with webhook endpoint, signature verification, id
 - Webhook endpoint bypasses SessionGuard, CsrfGuard, and throttle
 - Duplicate events are detected and skipped
 - All 6 event types route to correct org_subscriptions updates
+- checkout.session.completed resolves tenant via eid from Stripe session metadata
 - customer.subscription.deleted uses findByStripeCustomerId to locate org
-- Unit tests cover idempotency, error handling, and all event types
+- Unit tests cover idempotency, eid resolution, error handling, and all event types
 - Dev environments work without Stripe keys configured
 - No dead code (no unused services or methods)
 </success_criteria>
